--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           <kbd>Space</kbd> Hard drop<br />
           <kbd>&uarr;</kbd><kbd>W</kbd> / <kbd>X</kbd> Rotate CW<br />
           <kbd>Z</kbd> Rotate CCW<br />
-          <kbd>C</kbd> Hold<br />
+          <kbd>C</kbd> / <kbd>LShift</kbd> Hold<br />
           <kbd>M</kbd> Mute/Unmute<br />
           <kbd>Esc</kbd> / <kbd>P</kbd> Pause
         </div>
