unified score font coloring

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
         <div class="panel-box">
           <h3>Best</h3>
-          <div class="value" id="high-score" style="color: #c9a15f">0</div>
+          <div class="value" id="high-score">0</div>
         </div>
         <div class="panel-box">
           <h3>Level</h3>
@@ -331,12 +331,7 @@
         <p class="final-score" id="final-score"></p>
         <p
           id="new-best"
-          style="
-            color: #c9a15f;
-            font-size: 20px;
-            font-weight: bold;
-            display: none;
-          "
+          style="color: #fff; font-size: 20px; font-weight: bold; display: none"
         >
           NEW HIGH SCORE!
         </p>
